--- a/treebolicFilesServices/src/main/res/values/strings_nontranslatable.xml
+++ b/treebolicFilesServices/src/main/res/values/strings_nontranslatable.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name" translatable="false">Treebolic Files Services</string>
-    <string name="pref_default_source" translatable="false"></string>
+    <string name="pref_default_source" translatable="false"/>
     <string name="pref_default_base" translatable="false">/mnt/sdcard/files/</string>
     <string name="pref_default_imagebase" translatable="false">/storage/sdcard/files/images/</string>
     <string name="pref_default_service" translatable="false">IntentService</string>
