--- a/treebolicOwlServices/src/main/res/values/strings_download.xml
+++ b/treebolicOwlServices/src/main/res/values/strings_download.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
 	<string name="title_activity_download">Download</string>
 
