--- a/treebolicWordNetServices/src/main/res/menu/main.xml
+++ b/treebolicWordNetServices/src/main/res/menu/main.xml
@@ -1,59 +1,60 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="org.treebolic.wordnet.service.MainActivity" >
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools"
+      tools:context="org.treebolic.wordnet.service.MainActivity">
 
-    <item
-        android:id="@+id/searchView"
-        android:actionViewClass="android.widget.SearchView"
-        android:iconifiedByDefault="false"
-        android:showAsAction="always"
-        android:title="@string/title_search"/>
-    <item
-        android:id="@+id/status_data"
-        android:icon="@drawable/ic_action_error"
-        android:showAsAction="ifRoom"
-        android:title="@string/title_status_data_available"/>
-    <item
-        android:id="@+id/action_query"
-        android:showAsAction="never"
-        android:title="@string/title_query"/>
-    <item
-        android:id="@+id/action_download"
-        android:showAsAction="never"
-        android:title="@string/title_download"/>
+	<item
+		android:id="@+id/action_search"
+		android:iconifiedByDefault="false"
+		android:title="@string/title_search"
+		app:actionViewClass="android.support.v7.widget.SearchView"
+		app:showAsAction="always"/>
+	<item
+		android:id="@+id/action_status_data"
+		android:icon="@drawable/ic_action_error"
+		android:title="@string/title_status_data_available"
+		app:showAsAction="ifRoom"/>
+	<item
+		android:id="@+id/action_query"
+		android:title="@string/title_query"
+		app:showAsAction="never"/>
+	<item
+		android:id="@+id/action_download"
+		android:title="@string/title_download"
+		app:showAsAction="never"/>
 
-    <group android:id="@+id/provider_available" >
-        <item
-            android:id="@+id/action_query_file_provider"
-            android:showAsAction="never"
-            android:title="@string/title_query_file_provider"/>
-    </group>
-    <group android:id="@+id/data_available" >
-        <item
-            android:id="@+id/action_cleanup"
-            android:showAsAction="never"
-            android:title="@string/title_cleanup"/>
-    </group>
+	<group android:id="@+id/provider_available">
+		<item
+			android:id="@+id/action_query_file_provider"
+			android:title="@string/title_query_file_provider"
+			app:showAsAction="never"/>
+	</group>
+	<group android:id="@+id/data_available">
+		<item
+			android:id="@+id/action_cleanup"
+			android:title="@string/title_cleanup"
+			app:showAsAction="never"/>
+	</group>
 
-    <item
-        android:id="@+id/action_demo"
-        android:showAsAction="never"
-        android:title="@string/title_demo"/>
-    <item
-        android:id="@+id/action_finish"
-        android:showAsAction="never"
-        android:title="@string/title_finish"/>
-    <item
-        android:id="@+id/action_kill"
-        android:showAsAction="never"
-        android:title="@string/title_kill"/>
-    <item
-        android:id="@+id/action_settings"
-        android:showAsAction="never"
-        android:title="@string/title_settings"/>
-    <item
-        android:id="@+id/action_app_settings"
-        android:showAsAction="never"
-        android:title="@string/title_activity_app_settings"/>
+	<item
+		android:id="@+id/action_demo"
+		android:title="@string/title_demo"
+		app:showAsAction="never"/>
+	<item
+		android:id="@+id/action_finish"
+		android:title="@string/title_finish"
+		app:showAsAction="never"/>
+	<item
+		android:id="@+id/action_kill"
+		android:title="@string/title_kill"
+		app:showAsAction="never"/>
+	<item
+		android:id="@+id/action_settings"
+		android:title="@string/title_settings"
+		app:showAsAction="never"/>
+	<item
+		android:id="@+id/action_app_settings"
+		android:title="@string/title_activity_app_settings"
+		app:showAsAction="never"/>
 
 </menu>
