--- a/treebolicOwlServices/src/main/res/values/colors.xml
+++ b/treebolicOwlServices/src/main/res/values/colors.xml
@@ -6,9 +6,12 @@
 	<!-- pink -->
 	<item name="pink_color" type="color">#FFef2063</item>
 
-	<!-- lt_blue -->
+	<!-- blue -->
 	<item name="dark_blue_color" type="color">#FF293073</item>
 	<item name="blue_color" type="color">#FF4251bd</item>
+
+	<!-- gray -->
+	<color name="light_gray">#ffB0B0B0</color>
 
 	<!-- MAIN -->
 
