--- a/treebolicOwlServices/src/main/res/layout/toolbar.xml
+++ b/treebolicOwlServices/src/main/res/layout/toolbar.xml
@@ -4,5 +4,6 @@
                                    android:id="@+id/toolbar"
                                    android:layout_width="match_parent"
                                    android:layout_height="?attr/actionBarSize"
+                                   android:background="?attr/colorPrimary"
                                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
