minor translation fixes

--- a/treebolicOwlServices/src/main/res/values/strings_nontranslatable.xml
+++ b/treebolicOwlServices/src/main/res/values/strings_nontranslatable.xml
@@ -2,12 +2,13 @@
 
     <string name="owl" translatable="false">Owl</string>
 
-    <!-- default -->
+    <!-- treebolic -->
     <string name="pref_default_source" translatable="false">pizza.owl</string>
     <string name="pref_default_base" translatable="false">file:///storage/extSdCard/Owl/</string>
     <string name="pref_default_imagebase" translatable="false">file:///storage/extSdCard/Owl/images/</string>
-    <string name="pref_default_service" translatable="false">IntentService</string>
 
+    <!-- service -->
+    <string name="pref_default_service" translatable="false">IntentService</string>
     <string-array name="pref_services_list_values" translatable="false">
         <item>@string/pref_default_service</item>
         <item>Bound</item>
@@ -15,8 +16,8 @@
         <item>Messenger</item>
     </string-array>
 
+    <!-- download -->
     <string name="pref_download_url_default" translatable="false">http://treebolic.sourceforge.net/data/owl/owl.zip</string>
-
     <string-array name="pref_download_urls" translatable="false" tools:ignore="InconsistentArrays">
         <item>@string/pref_download_url_default</item>
         <item>http://treebolic.sourceforge.net/data/owl/pizza.owl</item>
