--- a/treebolicWordNetServices/src/main/res/values/strings_download.xml
+++ b/treebolicWordNetServices/src/main/res/values/strings_download.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <string name="pref_download_url_default" translatable="false">http://wordnetcode.princeton.edu/wn3.1.dict.tar.gz</string>
-    
-    <string-array name="pref_download_urls" translatable="false" tools:ignore="InconsistentArrays">
-        <item>http://wordnetcode.princeton.edu/wn3.1.dict.tar.gz</item>
-        <item>http://treebolic.sourceforge.net/data/wordnet/wn3.1.dict.tar.gz</item>
-        <item>http://treebolic.sourceforge.net/data/wordnet/wordnet31.zip</item>
-    </string-array>
+	<string name="title_download">Download WordNet</string>
+	<string name="title_activity_download">Download</string>
+
+	<!-- pref -->
+	<string name="pref_title_download">Download URL</string>
+	<string name="pref_description_download">Download URL for extra data</string>
+
+	<string-array name="pref_download_labels" tools:ignore="InconsistentArrays">
+		<item>Tar Gz WordNet 3.1 (Princeton)</item>
+		<item>Tar Gz WordNet 3.1</item>
+		<item>Zip WordNet 3.1</item>
+	</string-array>
 
 </resources>
