--- a/treebolicOwlServices/src/main/res/values-fr/strings_download.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings_download.xml
@@ -1,5 +1,21 @@
 <resources>
 
+	<string name="title_download">Télécharger</string>
 	<string name="title_activity_download">Téléchargement</string>
+
+	<!-- pref -->
+	<string name="pref_header_download">Download</string>
+	<string name="pref_summary_header_download">Download URL for data</string>
+	<string name="pref_title_download">Adresse de téléchargement</string>
+	<string name="pref_description_download">Adresse (URL) de téléchargement de données supplémentaires</string>
+
+	<!-- see pref_download_urls, same order -->
+	<string-array name="pref_download_labels">
+		<item>Tous zippés</item>
+		<item>Pizza</item>
+		<item>Pizza collaborative</item>
+		<item>Ontologie SUMO</item>
+		<item>Koala</item>
+	</string-array>
 
 </resources>
