--- a/treebolicOwlServices/src/main/res/values/strings_download.xml
+++ b/treebolicOwlServices/src/main/res/values/strings_download.xml
@@ -1,5 +1,21 @@
 <resources>
 
+	<string name="title_download">Download</string>
 	<string name="title_activity_download">Download</string>
+
+	<!-- pref -->
+	<string name="pref_header_download">Download</string>
+	<string name="pref_summary_header_download">Download URL for data</string>
+	<string name="pref_title_download">Download URL</string>
+	<string name="pref_description_download">Download URL for extra data</string>
+
+	<!-- see pref_download_urls, same order -->
+	<string-array name="pref_download_labels">
+		<item>All Zipped</item>
+		<item>Pizza</item>
+		<item>Collaborative pizza</item>
+		<item>SUMO ontology</item>
+		<item>Koala</item>
+	</string-array>
 
 </resources>
