--- a/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
@@ -22,7 +22,7 @@
 
     <!-- service -->
     <string name="pref_title_service">Service</string>
-    <string name="pref_description_services">Type du Service Owl</string>
+    <string name="pref_description_services">Type du Service OWL</string>
 
     <string-array name="pref_services_list_titles">
         <item>Intent service</item>
