--- a/treebolicWordNetServices/src/main/res/xml/pref_general.xml
+++ b/treebolicWordNetServices/src/main/res/xml/pref_general.xml
@@ -1,5 +1,5 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:my="http://schemas.android.com/apk/res-auto" >
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <EditTextPreference
         android:capitalize="none"
@@ -12,16 +12,12 @@
         android:summary="@string/pref_description_source"
         android:title="@string/pref_title_source" />
 
-    <org.treebolic.preference.AutoEditTextPreference
-        android:capitalize="none"
+   <org.treebolic.preference.OpenEditTextPreference
         android:defaultValue="@string/pref_download_url_default"
-        android:inputType="textUri"
         android:key="pref_download"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
         android:summary="@string/pref_description_download"
         android:title="@string/pref_title_download"
-        my:values="@array/pref_download_urls" />
+        app:labels="@array/pref_download_labels"
+        app:values="@array/pref_download_urls"/>
 
 </PreferenceScreen>
