--- a/treebolicWordNetServices/src/main/res/layout/actionbutton.xml
+++ b/treebolicWordNetServices/src/main/res/layout/actionbutton.xml
@@ -16,7 +16,7 @@
 		android:layout_centerHorizontal="true"
 		android:visibility="invisible"/>
 
-	<android.support.design.widget.FloatingActionButton
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/queryButton"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
