--- a/treebolicOwlServices/src/main/res/xml/pref_headers.xml
+++ b/treebolicOwlServices/src/main/res/xml/pref_headers.xml
@@ -2,12 +2,11 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
-
-	<!-- These settings headers are only used on tablets. -->
+<preference-headers
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<header
-		android:fragment="org.treebolic.owl.service.SettingsActivity$GeneralPreferenceFragment"
-		android:title="@string/pref_header_general"/>
+		app:fragment="org.treebolic.owl.service.SettingsActivity$GeneralPreferenceFragment"
+		app:title="@string/pref_header_general"/>
 
 </preference-headers>
