--- a/treebolicWordNetServices/src/main/res/xml/pref_headers.xml
+++ b/treebolicWordNetServices/src/main/res/xml/pref_headers.xml
@@ -2,16 +2,15 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
-
-	<!-- These settings headers are only used on tablets. -->
-
-	<header
-		android:fragment="org.treebolic.wordnet.service.SettingsActivity$GeneralPreferenceFragment"
-		android:title="@string/pref_header_general"/>
+<preference-headers
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<header
-		android:fragment="org.treebolic.wordnet.service.SettingsActivity$ServicePreferenceFragment"
-		android:title="@string/pref_header_service"/>
+		app:fragment="org.treebolic.wordnet.service.SettingsActivity$GeneralPreferenceFragment"
+		app:title="@string/pref_header_general"/>
+
+	<header
+		app:fragment="org.treebolic.wordnet.service.SettingsActivity$ServicePreferenceFragment"
+		app:title="@string/pref_header_service"/>
 
 </preference-headers>
