--- a/treebolicWordNetServices/src/main/res/xml/pref_general.xml
+++ b/treebolicWordNetServices/src/main/res/xml/pref_general.xml
@@ -2,7 +2,7 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<EditTextPreference
@@ -24,4 +24,4 @@
 		app:labels="@array/pref_download_labels"
 		app:values="@array/pref_download_urls"/>
 
-</PreferenceScreen>
+</androidx.preference.PreferenceScreen>
