--- a/treebolicFilesServices/src/main/res/xml/pref_general.xml
+++ b/treebolicFilesServices/src/main/res/xml/pref_general.xml
@@ -5,9 +5,8 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<EditTextPreference
-		android:capitalize="none"
 		android:defaultValue="@string/pref_default_source"
-		android:inputType="text"
+		android:inputType="textUri"
 		android:key="pref_source"
 		android:maxLines="1"
 		android:selectAllOnFocus="true"
