--- a/treebolicOwlServices/src/main/res/xml/pref_general.xml
+++ b/treebolicOwlServices/src/main/res/xml/pref_general.xml
@@ -6,9 +6,8 @@
                   xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<EditTextPreference
-		android:capitalize="none"
 		android:defaultValue="@string/pref_default_source"
-		android:inputType="text"
+		android:inputType="textUri"
 		android:key="pref_source"
 		android:maxLines="1"
 		android:selectAllOnFocus="true"
@@ -17,7 +16,6 @@
 		android:title="@string/pref_title_source"/>
 
 	<EditTextPreference
-		android:capitalize="none"
 		android:defaultValue="@string/pref_default_base"
 		android:inputType="textUri"
 		android:key="pref_base"
@@ -28,7 +26,6 @@
 		android:title="@string/pref_title_base"/>
 
 	<EditTextPreference
-		android:capitalize="none"
 		android:defaultValue="@string/pref_default_imagebase"
 		android:inputType="textUri"
 		android:key="pref_imagebase"
