--- a/treebolicWordNetServices/src/main/res/xml/pref_general.xml
+++ b/treebolicWordNetServices/src/main/res/xml/pref_general.xml
@@ -2,7 +2,7 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<EditTextPreference
@@ -23,4 +23,4 @@
 		app:labels="@array/pref_download_labels"
 		app:values="@array/pref_download_urls"/>
 
-</androidx.preference.PreferenceScreen>
+</PreferenceScreen>
