--- a/treebolicWordNetServices/src/main/res/xml/pref_headers.xml
+++ b/treebolicWordNetServices/src/main/res/xml/pref_headers.xml
@@ -2,15 +2,18 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<preference-headers
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-	<header
+	<Preference
 		app:fragment="org.treebolic.wordnet.service.SettingsActivity$GeneralPreferenceFragment"
-		app:title="@string/pref_header_general"/>
+		app:icon="@null"
+		app:key="pref_general"
+		app:title="@string/pref_header_general" />
 
-	<header
+	<Preference
 		app:fragment="org.treebolic.wordnet.service.SettingsActivity$ServicePreferenceFragment"
-		app:title="@string/pref_header_service"/>
+		app:icon="@null"
+		app:key="pref_service"
+		app:title="@string/pref_header_service" />
 
-</preference-headers>
+</PreferenceScreen>
