--- a/treebolicWordNetServices/src/main/res/menu/main.xml
+++ b/treebolicWordNetServices/src/main/res/menu/main.xml
@@ -30,10 +30,6 @@
 		android:id="@+id/action_demo"
 		android:title="@string/title_demo"
 		app:showAsAction="never"/>
-	<item
-		android:id="@+id/action_download"
-		android:title="@string/title_download"
-		app:showAsAction="never"/>
 
 	<group android:id="@+id/provider_available">
 		<item
@@ -47,13 +43,30 @@
 			android:title="@string/title_cleanup"
 			app:showAsAction="never"/>
 	</group>
+
 	<item
-		android:id="@+id/action_finish"
-		android:title="@string/title_finish"
+		android:id="@+id/action_rate"
+		android:title="@string/title_rate"
+		app:showAsAction="never" />
+	<item
+		android:id="@+id/action_others"
+		android:title="@string/title_others"
+		app:showAsAction="never" />
+	<item
+		android:id="@+id/action_donate"
+		android:title="@string/title_donate"
+		app:showAsAction="never" />
+	<item
+		android:id="@+id/action_download"
+		android:title="@string/title_download"
 		app:showAsAction="never"/>
 	<item
 		android:id="@+id/action_settings"
 		android:title="@string/title_settings"
+		app:showAsAction="never"/>
+	<item
+		android:id="@+id/action_finish"
+		android:title="@string/title_finish"
 		app:showAsAction="never"/>
 	<item
 		android:id="@+id/action_app_settings"
