--- a/treebolicWordNetServices/src/main/res/menu/main.xml
+++ b/treebolicWordNetServices/src/main/res/menu/main.xml
@@ -3,74 +3,84 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context="org.treebolic.wordnet.service.MainActivity">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	tools:context="org.treebolic.wordnet.service.MainActivity">
 
 	<item
 		android:id="@+id/action_search"
 		android:iconifiedByDefault="false"
 		android:title="@string/title_search"
 		app:actionViewClass="androidx.appcompat.widget.SearchView"
-		app:showAsAction="always"/>
+		app:showAsAction="always" />
 	<item
 		android:id="@+id/action_status_data"
 		android:icon="@drawable/ic_action_error"
 		android:title="@string/title_status_data_available"
-		app:showAsAction="always"/>
+		app:showAsAction="always" />
 	<item
 		android:id="@+id/action_query"
 		android:title="@string/title_query"
-		app:showAsAction="never"/>
+		app:showAsAction="never" />
 	<item
 		android:id="@+id/action_source"
 		android:title="@string/title_source"
-		app:showAsAction="never"/>
+		app:showAsAction="never" />
 	<item
 		android:id="@+id/action_demo"
 		android:title="@string/title_demo"
-		app:showAsAction="never"/>
-
-	<group android:id="@+id/provider_available">
-		<item
-			android:id="@+id/action_query_file_provider"
-			android:title="@string/title_query_file_provider"
-			app:showAsAction="never"/>
-	</group>
-	<group android:id="@+id/data_available">
-		<item
-			android:id="@+id/action_cleanup"
-			android:title="@string/title_cleanup"
-			app:showAsAction="never"/>
-	</group>
-
-	<item
-		android:id="@+id/action_rate"
-		android:title="@string/title_rate"
 		app:showAsAction="never" />
-	<item
-		android:id="@+id/action_others"
-		android:title="@string/title_others"
-		app:showAsAction="never" />
-	<item
-		android:id="@+id/action_donate"
-		android:title="@string/title_donate"
-		app:showAsAction="never" />
-	<item
-		android:id="@+id/action_download"
-		android:title="@string/title_download"
-		app:showAsAction="never"/>
 	<item
 		android:id="@+id/action_settings"
 		android:title="@string/title_settings"
-		app:showAsAction="never"/>
-	<item
-		android:id="@+id/action_finish"
-		android:title="@string/title_finish"
-		app:showAsAction="never"/>
-	<item
-		android:id="@+id/action_app_settings"
-		android:title="@string/title_activity_app_settings"
-		app:showAsAction="never"/>
+		app:showAsAction="never" />
+	<item android:title="@string/title_menu_data">
+		<menu>
+			<group android:id="@+id/provider_available">
+				<item
+					android:id="@+id/action_download"
+					android:title="@string/title_download"
+					app:showAsAction="never" />
+				<item
+					android:id="@+id/action_query_file_provider"
+					android:title="@string/title_query_file_provider"
+					app:showAsAction="never" />
+			</group>
+			<group android:id="@+id/data_available">
+				<item
+					android:id="@+id/action_cleanup"
+					android:title="@string/title_cleanup"
+					app:showAsAction="never" />
+			</group>
+		</menu>
+	</item>
+	<item android:title="@string/title_menu_about">
+		<menu>
+			<item
+				android:id="@+id/action_rate"
+				android:title="@string/title_rate"
+				app:showAsAction="never" />
+			<item
+				android:id="@+id/action_others"
+				android:title="@string/title_others"
+				app:showAsAction="never" />
+			<item
+				android:id="@+id/action_donate"
+				android:title="@string/title_donate"
+				app:showAsAction="never" />
+		</menu>
+	</item>
+	<item android:title="@string/title_menu_app">
+		<menu>
+			<item
+				android:id="@+id/action_app_settings"
+				android:title="@string/title_activity_app_settings"
+				app:showAsAction="never" />
+			<item
+				android:id="@+id/action_finish"
+				android:title="@string/title_finish"
+				app:showAsAction="never" />
+		</menu>
+	</item>
 
 </menu>
