--- a/treebolicFilesServices/src/main/res/menu/main.xml
+++ b/treebolicFilesServices/src/main/res/menu/main.xml
@@ -53,6 +53,10 @@
 				android:id="@+id/action_finish"
 				android:title="@string/title_finish"
 				app:showAsAction="never" />
+			<item
+				android:id="@+id/action_kill"
+				android:title="@string/title_kill"
+				app:showAsAction="never" />
 		</menu>
 	</item>
 
