--- a/treebolicFilesServices/src/main/res/layout/actionbutton.xml
+++ b/treebolicFilesServices/src/main/res/layout/actionbutton.xml
@@ -29,6 +29,7 @@
 		android:onClick="onClick"
 		android:visibility="invisible"
 		app:fabSize="normal"
+		app:tint="@android:color/white"
 		app:useCompatPadding="true"
 		app:srcCompat="@drawable/ic_treebolic"
 		tools:ignore="UnusedAttribute"/>
