--- a/treebolicFilesServices/src/main/res/values/strings_settings.xml
+++ b/treebolicFilesServices/src/main/res/values/strings_settings.xml
@@ -8,6 +8,7 @@
 
 	<!-- General settings -->
 	<string name="pref_header_general">General</string>
+	<string name="pref_header_services">Services</string>
 
 	<!-- source -->
 	<string name="pref_title_source">Source</string>
@@ -22,7 +23,6 @@
 
 	<string-array name="pref_services_list_titles">
 		<item>Intent service</item>
-		<item>Bound service</item>
 		<item>AIDL Bound service</item>
 		<item>Messenger bound service</item>
 	</string-array>
