--- a/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
@@ -8,6 +8,8 @@
 
 	<!-- General settings -->
 	<string name="pref_header_general">Général</string>
+	<string name="pref_header_services">Services</string>
+	<string name="pref_header_download">Téléchargement</string>
 
 	<!-- source -->
 	<string name="pref_title_source">Source</string>
@@ -31,7 +33,6 @@
 	<string-array name="pref_services_list_titles">
 		<item>Intent service</item>
 		<item>Bound service</item>
-		<item>AIDL Bound service</item>
 		<item>Messenger bound service</item>
 	</string-array>
 
