--- a/treebolicFilesServices/src/main/res/values/colors.xml
+++ b/treebolicFilesServices/src/main/res/values/colors.xml
@@ -3,11 +3,11 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
 	<!-- base colors override -->
-	<color name="default_primaryColor">#FFf44336</color>
-	<color name="default_primaryDarkColor">#FFb71c1c</color>
-	<color name="default_secondaryColor">#FF81c784</color>
+	<color name="default_primaryColor" tools:keep="@color/default_primaryColor">#FFf44336</color>
+	<color name="default_primaryDarkColor" tools:keep="@color/default_primaryDarkColor">#FFb71c1c</color>
+	<color name="default_secondaryColor" tools:keep="@color/default_secondaryColor">#FF81c784</color>
 
 </resources>
