--- a/treebolicFilesServices/src/main/res/xml/backup_descriptor.xml
+++ b/treebolicFilesServices/src/main/res/xml/backup_descriptor.xml
@@ -1,12 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
 <full-backup-content>
-	<!-- TODO Remove the following "exclude" elements to make them a part of the auto backup -->
-	<!-- Exclude the shared preferences file that contains the GCM registrationId -->
 	<exclude
 		domain="sharedpref"
-		path="org.treebolic.trial_trial.xml"/>
+		path="org.treebolic.trial_trial.xml" />
 </full-backup-content>
