--- a/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
@@ -2,14 +2,14 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
 	<string name="title_activity_settings">Paramètres</string>
 
 	<!-- General settings -->
-	<string name="pref_header_general">Général</string>
-	<string name="pref_header_services">Services</string>
-	<string name="pref_header_download">Téléchargement</string>
+	<string name="pref_header_general" tools:keep="@string/pref_header_general">Général</string>
+	<string name="pref_header_services" tools:keep="@string/pref_header_services">Services</string>
+	<string name="pref_header_download" tools:keep="@string/pref_header_download">Téléchargement</string>
 
 	<!-- source -->
 	<string name="pref_title_source">Source</string>
