--- a/treebolicOwlServices/src/main/res/xml/backup_descriptor.xml
+++ b/treebolicOwlServices/src/main/res/xml/backup_descriptor.xml
@@ -4,5 +4,7 @@
   -->
 
 <full-backup-content>
-	<!-- Exclude specific shared preferences that contain GCM registration Id -->
+	<exclude
+		domain="root"
+		path="." />
 </full-backup-content>
