--- a/treebolicOwlServices/src/main/res/xml/pref_general.xml
+++ b/treebolicOwlServices/src/main/res/xml/pref_general.xml
@@ -2,8 +2,7 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<EditTextPreference
 		android:defaultValue="@string/pref_default_source"
