move intent service to broadcast service

--- a/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
@@ -31,7 +31,7 @@
 	<string name="pref_description_services">Type du Service OWL</string>
 
 	<string-array name="pref_services_list_titles">
-		<item>Intent service</item>
+		<item>Broadcast service</item>
 		<item>Bound service</item>
 		<item>Messenger bound service</item>
 	</string-array>
