--- a/treebolicFilesServices/src/main/res/values-fr/strings_settings.xml
+++ b/treebolicFilesServices/src/main/res/values-fr/strings_settings.xml
@@ -22,7 +22,7 @@
 	<string name="pref_description_services">Type du Service Fichiers</string>
 
 	<string-array name="pref_services_list_titles">
-		<item>Intent service</item>
+		<item>Broadcast service</item>
 		<item>AIDL Bound service</item>
 		<item>Messenger bound service</item>
 	</string-array>
