--- a/treebolicFilesServices/src/main/res/values/strings_nontranslatable.xml
+++ b/treebolicFilesServices/src/main/res/values/strings_nontranslatable.xml
@@ -6,7 +6,7 @@
 
 	<string name="pref_default_source" translatable="false">/storage/</string>
 
-	<string name="pref_default_service" translatable="false">IntentService</string>
+	<string name="pref_default_service" translatable="false">BroadcastService</string>
 	<string-array name="pref_services_list_values" translatable="false">
 		<item>@string/pref_default_service</item>
 		<item>AIDLBound</item>
