--- a/treebolicOwlServices/src/main/res/values/strings_nontranslatable.xml
+++ b/treebolicOwlServices/src/main/res/values/strings_nontranslatable.xml
@@ -12,7 +12,7 @@
 	<string name="pref_default_imagebase" translatable="false">file:///storage/extSdCard/Owl/images/</string>
 
 	<!-- service -->
-	<string name="pref_default_service" translatable="false">IntentService</string>
+	<string name="pref_default_service" translatable="false">BroadcastService</string>
 	<string-array name="pref_services_list_values" translatable="false">
 		<item>@string/pref_default_service</item>
 		<item>AIDLBound</item>
