--- a/treebolicWordNetServices/src/main/res/values-fr/strings_settings.xml
+++ b/treebolicWordNetServices/src/main/res/values-fr/strings_settings.xml
@@ -23,7 +23,7 @@
 	<string name="pref_description_services">Type du Service WordNet</string>
 
 	<string-array name="pref_services_list_titles">
-		<item>Intent service</item>
+		<item>Broadcast service</item>
 		<item>AIDL Bound service</item>
 		<item>Messenger bound service</item>
 	</string-array>
