--- a/treebolicWordNetServices/src/main/res/values/strings_nontranslatable.xml
+++ b/treebolicWordNetServices/src/main/res/values/strings_nontranslatable.xml
@@ -15,7 +15,7 @@
 	</string-array>
 
 	<!-- service -->
-	<string name="pref_default_service" translatable="false">IntentService</string>
+	<string name="pref_default_service" translatable="false">BroadcastService</string>
 
 	<string-array name="pref_services_list_values" translatable="false">
 		<item>@string/pref_default_service</item>
