--- a/treebolicOwlServices/src/main/res/layout/activity_main.xml
+++ b/treebolicOwlServices/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context="org.treebolic.owl.service.MainActivity">
+	tools:context="org.treebolic.owl.MainActivity">
 
 	<com.google.android.material.appbar.AppBarLayout
 		android:layout_width="match_parent"
