--- a/treebolicOwlServices/src/main/res/layout/fragment_main.xml
+++ b/treebolicOwlServices/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,7 @@
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
-	tools:context="org.treebolic.owl.service.MainActivity$PlaceholderFragment">
+	tools:context="org.treebolic.owl.MainActivity$PlaceholderFragment">
 
 	<ImageView
 		android:layout_width="wrap_content"
