--- a/treebolicWordNetServices/src/main/res/layout/activity_query_file_provider.xml
+++ b/treebolicWordNetServices/src/main/res/layout/activity_query_file_provider.xml
@@ -6,7 +6,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context="org.treebolic.wordnet.service.QueryProviderActivity">
+	tools:context="org.treebolic.wordnet.QueryProviderActivity">
 
 	<Button
 		android:id="@+id/button"
