--- a/treebolicOwlServices/src/main/res/xml/pref_headers.xml
+++ b/treebolicOwlServices/src/main/res/xml/pref_headers.xml
@@ -7,19 +7,19 @@
 	tools:keep="@xml/pref_headers">
 
 	<Preference
-		app:fragment="org.treebolic.owl.service.SettingsActivity$ServicesPreferenceFragment"
+		app:fragment="org.treebolic.owl.SettingsActivity$ServicesPreferenceFragment"
 		app:icon="@null"
 		app:key="pref_service"
 		app:title="@string/pref_header_services" />
 
 	<Preference
-		app:fragment="org.treebolic.owl.service.SettingsActivity$GeneralPreferenceFragment"
+		app:fragment="org.treebolic.owl.SettingsActivity$GeneralPreferenceFragment"
 		app:icon="@null"
 		app:key="pref_general"
 		app:title="@string/pref_header_general" />
 
 	<Preference
-		app:fragment="org.treebolic.owl.service.SettingsActivity$DownloadPreferenceFragment"
+		app:fragment="org.treebolic.owl.SettingsActivity$DownloadPreferenceFragment"
 		app:icon="@null"
 		app:key="pref_download"
 		app:title="@string/pref_header_download" />
