--- a/treebolicWordNetServices/src/main/res/menu/main.xml
+++ b/treebolicWordNetServices/src/main/res/menu/main.xml
@@ -5,7 +5,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	tools:context="org.treebolic.wordnet.service.org.treebolic.wordnet.MainActivity">
+	tools:context="org.treebolic.wordnet.MainActivity">
 
 	<item
 		android:id="@+id/action_search"
