--- a/treebolicWordNetServices/src/main/res/xml/pref_headers.xml
+++ b/treebolicWordNetServices/src/main/res/xml/pref_headers.xml
@@ -7,19 +7,19 @@
 	tools:keep="@xml/pref_headers">
 
 	<Preference
-		app:fragment="org.treebolic.wordnet.service.SettingsActivity$ServicePreferenceFragment"
+		app:fragment="org.treebolic.wordnet.SettingsActivity$ServicePreferenceFragment"
 		app:icon="@null"
 		app:key="pref_service"
 		app:title="@string/pref_header_service" />
 
 	<Preference
-		app:fragment="org.treebolic.wordnet.service.SettingsActivity$GeneralPreferenceFragment"
+		app:fragment="org.treebolic.wordnet.SettingsActivity$GeneralPreferenceFragment"
 		app:icon="@null"
 		app:key="pref_general"
 		app:title="@string/pref_header_general" />
 
 	<Preference
-		app:fragment="org.treebolic.wordnet.service.SettingsActivity$DownloadPreferenceFragment"
+		app:fragment="org.treebolic.wordnet.SettingsActivity$DownloadPreferenceFragment"
 		app:icon="@null"
 		app:key="pref_download"
 		app:title="@string/pref_header_download" />
