service_settings section from menu

--- a/treebolicWordNetServices/src/main/res/menu/main.xml
+++ b/treebolicWordNetServices/src/main/res/menu/main.xml
@@ -54,6 +54,10 @@
 			</group>
 		</menu>
 	</item>
+	<item
+		android:id="@+id/action_settings_service"
+		android:title="@string/title_settings_service"
+		app:showAsAction="never" />
 	<item android:title="@string/title_menu_about">
 		<menu>
 			<item
