--- a/treebolicFilesServices/src/main/res/values/strings-nontranslatable.xml
+++ b/treebolicFilesServices/src/main/res/values/strings-nontranslatable.xml
@@ -6,10 +6,11 @@
 
 	<string name="pref_default_source" translatable="false">/storage/</string>
 
-	<string name="pref_default_service" translatable="false">BroadcastService</string>
+	<string name="pref_default_service" translatable="false">Broadcast</string>
 	<string-array name="pref_services_list_values" translatable="false">
 		<item>@string/pref_default_service</item>
 		<item>AIDLBound</item>
+		<item>Bound</item>
 		<item>Messenger</item>
 	</string-array>
 
