--- a/treebolicOwlServices/src/main/res/values/strings-nontranslatable.xml
+++ b/treebolicOwlServices/src/main/res/values/strings-nontranslatable.xml
@@ -12,10 +12,11 @@
 	<string name="pref_default_imagebase" translatable="false">file:///storage/extSdCard/Owl/images/</string>
 
 	<!-- service -->
-	<string name="pref_default_service" translatable="false">BroadcastService</string>
+	<string name="pref_default_service" translatable="false">Broadcast</string>
 	<string-array name="pref_services_list_values" translatable="false">
 		<item>@string/pref_default_service</item>
 		<item>AIDLBound</item>
+		<item>Bound</item>
 		<item>Messenger</item>
 	</string-array>
 
