--- a/treebolicWordNetServices/src/main/res/values/strings-nontranslatable.xml
+++ b/treebolicWordNetServices/src/main/res/values/strings-nontranslatable.xml
@@ -15,11 +15,12 @@
 	</string-array>
 
 	<!-- service -->
-	<string name="pref_default_service" translatable="false">BroadcastService</string>
+	<string name="pref_default_service" translatable="false">Broadcast</string>
 
 	<string-array name="pref_services_list_values" translatable="false">
 		<item>@string/pref_default_service</item>
 		<item>AIDLBound</item>
+		<item>Bound</item>
 		<item>Messenger</item>
 	</string-array>
 
